--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -138,8 +138,8 @@ p.subtitle {
   color: #2532A9;
   text-transform: uppercase;
   font-weight: 600;
-  font-size: 16px;
-  font-size: 1rem;
+  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 1.5;
 }
 @media screen and (min-width: 480px) {
@@ -195,8 +195,8 @@ div.card {
   background: linear-gradient(to right, #FF3F4A 0%, #743AC0 50%, #2532A9 100%);
   width: 18.75em;
   height: 300px;
-  font-size: 16px;
-  font-size: 1rem;
+  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 1.5;
 }
 @media screen and (min-width: 480px) {
@@ -347,8 +347,8 @@ header {
   font-family: "Fire Code", monospace;
   color: #f2f2f2;
   padding: 0 0.75rem;
-  font-size: 16px;
-  font-size: 1rem;
+  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 1.5;
 }
 @media screen and (min-width: 480px) {
@@ -564,8 +564,8 @@ ul li a {
   color: #2532A9;
   text-transform: uppercase;
   font-weight: 600;
-  font-size: 16px;
-  font-size: 1rem;
+  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 1.5;
 }
 @media screen and (min-width: 480px) {
